Create in Class CaesarCipher bruteForce and statisticalAnalysisMethod methods